fix input shifting when no comments

--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -92,9 +92,9 @@
   position: fixed;
 }
 
-.noComments {
+.empty {
   display: flex;
-
+  height: 84.1vh;
 }
 
 .message_form {
